Bug 1592398 - Fix SSL name collisions with Apple Security libraries r=drno

Forces the order of includes before `sslproto.h`

Differential Revision: https://phabricator.services.mozilla.com/D51148