media/mtransport/transportlayerdtls.h
@@ -12,6 +12,12 @@
 #include <queue>
 #include <set>
 
+#ifdef XP_MACOSX
+// ensure that Apple Security kit enum goes before "sslproto.h"
+#  include <CoreFoundation/CFAvailability.h>
+#  include <Security/CipherSuite.h>
+#endif
+
 #include "sigslot.h"
 
 #include "mozilla/RefPtr.h"
